--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -15,11 +15,68 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.getSelectedRepository().name}" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+            <ImageView
+                android:id="@+id/imageId"
+                android:src="@drawable/baseline_book"
+                android:layout_width="40dp"
+                android:layout_height="40dp"/>
+            <TextView
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:textColor="@color/blue"
+                android:gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@{viewModel.getSelectedRepository().fullName}" />
 
+
+
+        </LinearLayout>
+        <TextView
+            android:id="@+id/updatedateAndTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textSize="16sp"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textSize="16sp"
+            android:text="@{viewModel.getSelectedRepository().description}"
+            />
+
+
+
+        <LinearLayout
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="30dp">
+            <TextView
+                android:gravity="center_vertical"
+                android:text="URL:"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="8dp"
+                android:textSize="16sp"
+                />
+
+            <TextView
+                android:gravity="center_vertical"
+                android:id="@+id/descriptionTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="8dp"
+                android:textSize="16sp"
+                android:text="@{viewModel.getSelectedRepository().description}"
+                />
+
+        </LinearLayout>
         <!-- Add more UI elements as needed -->
 
     </LinearLayout>
